adding health route and seeing if render auto updates
